2003-07-03  Alexandre Duret-Lutz  <adl@gnu.org>

	* NEWS: Categorize entries.
	Suggested by Jim Meyering.

	* Makefile.am (maintainer-clean): Disallow '$AUTOMAKE && exit 1'.
	Ignore @...@ substitutions in comments.
	* tests/defs.in: Try to make the shell more POSIX compliant.
	(AUTOMAKE_run, AUTOMAKE_fails): New functions.
	* tests/README: Mention AUTOMAKE_fails.
	* tests/alloca.test, tests/alloca2.test, tests/ansi8.test,
	* tests/asm.test, tests/backsl3.test, tests/backsl4.test,
	* tests/badline.test, tests/badopt.test, tests/canon.test,
	* tests/canon5.test, tests/colneq.test, tests/comment3.test,
	* tests/comment5.test, tests/cond2.test, tests/cond20.test,
	* tests/cond23.test, tests/cond24.test, tests/cond27.test,
	* tests/condinc2.test, tests/conff2.test, tests/cxx2.test,
	* tests/dejagnu2.test, tests/dirforbid.test,
	* tests/distcom3.test, tests/else.test, tests/exdir2.test,
	* tests/exeext2.test, tests/gcj2.test, tests/gcj5.test,
	* tests/getopt.test, tests/gettext.test, tests/gettext2.test,
	* tests/gnits.test, tests/gnuwarn.test, tests/gnuwarn2.test,
	* tests/insh.test, tests/lex2.test, tests/libobj10.test,
	* tests/libobj12.test, tests/libobj13.test,
	* tests/libobj3.test, tests/library2.test,
	* tests/library3.test, tests/libtool4.test,
	* tests/libtool6.test, tests/lisp2.test, tests/location.test,
	* tests/nogzip2.test, tests/output5.test, tests/overrid.test,
	* tests/percent.test, tests/percent2.test,
	* tests/pluseq5.test, tests/pluseq7.test, tests/pluseq9.test,
	* tests/pr211.test, tests/primary.test, tests/primary2.test,
	* tests/python2.test, tests/recurs.test, tests/reqd2.test,
	* tests/seenc.test, tests/specflg.test, tests/specflg2.test,
	* tests/spell.test, tests/spell2.test, tests/srcsub.test,
	* tests/srcsub2.test, tests/stdlib.test, tests/subdir7.test,
	* tests/substtarg.test, tests/suffix11.test,
	* tests/symlink.test, tests/syntax.test,
	* tests/targetclash.test, tests/txinfo4.test,
	* tests/version3.test, tests/warnopts.test,