@@ -76,6 +76,12 @@
   default), and other portions using the GNU style (cperl-mode's
   default).  Write new code using GNU style.
 
+* Don't use & for function calls, unless required.
+  The use of & prevents prototypes from being checked.
+  Just as above, don't change massively all the code to strip the
+  &, just convert the old code as you work on it, and write new
+  code without.
+
 * Perl 5 is now OK.
 
 
@@ -131,3 +137,28 @@
 
 * Update version number in configure.in to next alpha number.
   Re-run autoconf and commit.
+
+-----
+
+Copyright (C) 2003 Free Software Foundation, Inc.
+
+This file is part of GNU Automake.
+
+GNU Automake is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2, or (at your option)
+any later version.
+
+GNU Automake is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with autoconf; see the file COPYING.  If not, write to
+the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+Boston, MA 02111-1307, USA.
+
+Local Variables:
+mode: text
+End:
