@@ -1,3 +1,10 @@
+2003-07-04  Akim Demaille  <akim@epita.fr>
+
+	* automake.in (&scan_texinfo_file, &output_texinfo_build_rules,
+	(&handle_texinfo_helper, &handle_texinfo): Formatting changes.
+	Prototype properly.
+	Don't use & when calling functions.
+
 2003-07-03  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* NEWS: Categorize entries.
